<resources>
    <string name="app_name">SchoolTools</string>
    <string name="channel_name">SchoolTools-Channel</string>
    <string name="channel_description">NotificationChannel für SchoolTools</string>
    <string name="main_nav_main">Startseite</string>
    <string name="main_nav_buttons">Knöpfe</string>
    <string name="main_nav_mark">Noten</string>
    <string name="main_nav_mark_list">Notenliste</string>
    <string name="main_nav_calculateMark">Noten berechnen</string>
    <string name="main_nav_plan">Planen</string>
    <string name="main_nav_timetable">Stundenplan</string>
    <string name="main_nav_notes">Notizen</string>
    <string name="main_nav_timer">Schultimer</string>
    <string name="main_nav_todo">ToDo</string>
    <string name="main_nav_learn">Lernen</string>
    <string name="main_nav_learningCards">Kartei-Karten</string>
    <string name="main_nav_bookmarks">Lesezeichen</string>
    <string name="main_nav_else">Sonstiges</string>
    <string name="main_speech">Sprachbefehl</string>
    <string name="main_menu_export">Export/Import</string>
    <string name="main_menu_settings">Einstellungen</string>
    <string name="main_menu_help">Hilfe</string>
    <string name="main_menu_close">Beenden</string>
    <string name="main_today">Heute</string>
    <string name="main_today_timetable">Aktuelle Fächer</string>
    <string name="main_top5Notes">Top 5 Notizen</string>
    <string name="main_importantToDos">5 Wichtigste ToDos</string>
    <string name="main_taggedBookMarks">Getagte Lesezeichen</string>
    <string name="main_quickQuery">Schnelle Abfrage</string>
    <string name="main_importantToDos_onlyNotSolved">nur nicht gelöste</string>
    <string name="main_savedTimeTables">Gespeicherte Stundenpläne</string>
    <string name="main_savedMarkList">Gespeicherte Notenliste</string>
    <string name="main_noEntry">Kein Eintrag</string>
    <string name="main_refreshSuccessFully">Erfolgreich aktualisiert!</string>
    <string name="main_speak_todo">Tutu</string>
    <string name="main_speak_note_success">Notiz erfolgreich gespeichert!</string>
    <string name="main_speak_todo_success">ToDo erfolgreich gespeichert!</string>
    <string name="marklist_state">Status</string>
    <string name="marklist_state_ok">Erfolgreich berechnet!</string>
    <string name="marklist_state_error">Daten sind Fehlerhaft!</string>
    <string name="marklist_maxPoints">Max. Punkte</string>
    <string name="marklist_mark">Note</string>
    <string name="marklist_mark_quarter">Viertel Noten</string>
    <string name="marklist_mark_tenth">Zehntel Noten</string>
    <string name="marklist_points">Punkte</string>
    <string name="marklist_failures">Fehler</string>
    <string name="marklist_points_half">Halbe Punkte</string>
    <string name="marklist_dictatMode">Diktat-Modus</string>
    <string-array name="marklist_search">
        <item>Pkt/F</item>
        <item>Note</item>
    </string-array>
    <string name="marklist_search_after">Suche nach</string>
    <string name="marklist_bestMarkAt">Beste Note ab</string>
    <string name="marklist_worstMarkTo">Schlechteste Note bis</string>
    <string-array name="marklist_type">
        <item>Lineare Notenliste</item>
        <item>Notenliste mit Knicks</item>
        <item>Exponentielle Notenliste</item>
        <item>IHK-Notenliste</item>
    </string-array>
    <string-array name="marklist_view">
        <item>beste Note zuerst</item>
        <item>schlechteste Note zuerst</item>
        <item>höchste Punktzahl zuerst</item>
        <item>niedrigste Punktzahl zuerst</item>
    </string-array>
    <string-array name="marklist_markMode">
        <item>normale Noten (1–6)</item>
        <item>Notenpunkte (0–15)</item>
        <item>normale Noten mit Zeichen</item>
    </string-array>
    <string name="marklist_settings_save_title">Einstellungen speichern als</string>
    <string name="marklist_settings_open_title">Einstellungen öffnen</string>
    <string name="marklist_extended_show_steps">Stufen anzeigen</string>
    <string name="marklist_extended_menu_snapshot">Als Bild speichern</string>
    <string name="marklist_extended_menu_share">Teilen</string>
    <string name="marklist_menu_saveDefault">Als Standard speichern</string>
    <string name="marklist_menu_resetToDefault">Auf Standard zurücksetzen</string>
    <string name="marklist_menu_saveMarkList">Notenliste speichern</string>
    <string name="marklist_menu_openMarkList">Notenliste öffnen</string>
    <string name="marklist_menu_extended">Erweiterte Ansicht</string>
    <string name="mark_weight">Gewichtung</string>
    <string name="mark_mark">Note</string>
    <string name="mark_average">Durchschnitt</string>
    <string name="mark_themes">Themen</string>
    <string name="mark_timerEvent">Klausur in Timer eintragen</string>
    <string name="mark_todo">ToDo-Liste aus Themen erstellen</string>
    <string name="mark_date">Datum</string>
    <string name="mark_year">Jahr</string>
    <string name="mark_test">Arbeit</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_general_summary">Einstellungen für Notifikationen, Erinnerungen, Datenbank und Design</string>
    <string name="settings_general_notifications_title">Notifikationen anzeigen</string>
    <string name="settings_general_notifications_summary">Notifikationen von aktuellen Erinnerungen anzeigen!</string>
    <string name="settings_general_assistant">Assistent benutzen</string>
    <string name="settings_general_assistant_summary">Wenn Assistent vorhanden, dann diesen benutzen, um ein neues Element hinzuzufügen!</string>
    <string name="settings_general_date_and_time">Datum und Zeit</string>
    <string name="settings_general_date">Datums-Format</string>
    <string name="settings_general_date_summary">Datums-Format, welches in der App verwendet wird, ändern</string>
    <string name="settings_general_date_default">dd.MM.yyyy</string>
    <string name="settings_general_time">Zeit-Format</string>
    <string name="settings_general_time_summary">Zeit-Format, welches in der App verwendet wird, ändern</string>
    <string name="settings_general_time_default">HH:mm:ss</string>
    <string name="settings_general_background">Hintergründe</string>
    <string name="settings_general_custom_background_title">Eigenes Hintergrundbild</string>
    <string name="settings_general_custom_background_summary">App-Hintergrundbild durch eigenes Bild ersetzen!</string>
    <string name="settings_general_custom_app_bar_title">Eigenes Hintergrundbild der App-Bar</string>
    <string name="settings_general_custom_app_bar_summary">App-Bar-Hintergrundbild durch eigenes Bild ersetzen!</string>
    <string name="settings_general_custom_background_select">Bilder auswählen</string>
    <string name="settings_general_whatsNew">Neuigkeiten</string>
    <string name="settings_general_whatsNew_title">Neuigkeiten erneut anzeigen</string>
    <string name="settings_general_whatsNew_summary">Den Neuigkeiten Bildschirm erneut anzeigen</string>
    <string name="settings_general_database">Datenbank</string>
    <string name="settings_general_deleteMemories_title">Erinnerungen löschen</string>
    <string name="settings_general_deleteMemories_summary">Erinnerungen löschen, nachdem sie abgelaufen sind</string>
    <string name="settings_general_reset_database_title">Datenbank zurücksetzen</string>
    <string name="settings_general_reset_database_summary">Datenbank auf Auslieferungszustand zurücksetzen!</string>
    <string name="settings_start">Startbildschirm</string>
    <string name="settings_start_summary">Einstellungen für Start-Modul, Auswahl der Widgets auf dem Start-Bildschirm, Aktivieren und Deaktivieren von Modulen</string>
    <string name="settings_start_start_header">Widgets für Startseite auswählen</string>
    <string name="settings_start_start_summary">Wählen Sie die Widgets aus, welche auf der Startseite angezeigt
        werden.
    </string>
    <string name="settings_school">Thematische Einstellungen</string>
    <string name="settings_school_expert_header">Experten-Modus (Notenliste)</string>
    <string name="settings_school_expert_summary">Der Experten-Modus enthält erweiterte Funktionen!</string>
    <string name="settings_school_extended_max_header">Maximale Punktzahl (Notenliste)</string>
    <string name="settings_school_extended_max_summary">Maximale Punktzahl beim Diagram im erweiterten Modus!</string>
    <string name="settings_school_extended_max_default">100</string>
    <string name="settings_school_timer_notification_header">Erinnerung x Tage vorher!</string>
    <string name="settings_school_timer_notification_summary">Anzahl der Tage für die Erinnerung festlegen</string>
    <string name="settings_school_timer_notification_default">7</string>
    <string name="settings_school_perspective_header">Stundenplan-Modus</string>
    <string name="settings_school_perspective_summary_on">Stundenplan aus Sicht eines Lehrers</string>
    <string name="settings_school_perspective_summary_of">Stundenplan aus Sicht eines Schülers</string>
    <string name="settings_school_breakTime_header">Länge der Pause</string>
    <string name="settings_school_breakTime_summary">Die Standard-Länge der Pause</string>
    <string name="settings_school_breakTime_default">20</string>
    <string name="settings_sync_calendar">Synchronisation des Kalenders</string>
    <string name="settings_sync_calendar_turnOn_header">Synchronistation aktivieren</string>
    <string name="settings_sync_calendar_turnOn_summary">Synchronistation des Kalenders aktivieren</string>
    <string name="settings_sync_calendar_name_header">Name des Kalenders</string>
    <string name="settings_sync_calendar_name_summary">Name des Kalenders eingeben</string>
    <string name="settings_sync_contacts">Synchronisation der Kontakte</string>
    <string name="settings_sync_contacts_turnOn_header">Synchronistation aktivieren</string>
    <string name="settings_sync_contacts_turnOn_summary">Synchronistation der Kontakte aktivieren</string>
    <string name="settings_sync_contacts_name_header">Name der Kontakt-Gruppe</string>
    <string name="settings_sync_contacts_name_summary">Name der Kontakt-Gruppe eingeben</string>
    <string name="timetable_teacher">Lehrer</string>
    <string name="timetable_lesson">Fach</string>
    <string name="timetable_class">Klasse</string>
    <string name="todo_list">ToDo-Liste</string>
    <string name="note_convert_to_todo">Konvertiere Notiz zu ToDo!</string>
    <string name="note_convert">Konvertieren</string>
    <string name="learningCard_groups">Gruppen</string>
    <string name="learningCard_query">Abfragen</string>
    <string name="learningCard_assistant">Assistent</string>
    <string name="traffic_light">Ampel</string>
    <string name="traffic_light_start">Aufnahme starten</string>
    <string name="traffic_light_stop">Aufnahme stoppen</string>
    <string name="traffic_light_exp">Diagram anzeigen</string>
    <string name="traffic_light_orange">Orange</string>
    <string name="traffic_light_orange_def">45</string>
    <string name="traffic_light_red">Rot</string>
    <string name="traffic_light_red_def">60</string>
    <string name="traffic_light_max">Maximum</string>
    <string name="traffic_light_max_def">100</string>
    <string name="traffic_light_password">Password</string>
    <string name="sys_edit">Bearbeiten</string>
    <string name="sys_delete">Löschen</string>
    <string name="sys_save">Speichern</string>
    <string name="sys_cancel">Abbrechen</string>
    <string name="sys_showData">Daten zeigen</string>
</resources>