<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_sync_calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:layout="@android:layout/preference_category">
        <SwitchPreference
            android:key="swtSyncCalendarTurnOn"
            android:title="@string/settings_sync_calendar_turnOn_header"
            android:summary="@string/settings_sync_calendar_turnOn_summary"/>
        <EditTextPreference
            android:key="txtSyncCalendarName"
            android:title="@string/settings_sync_calendar_name_header"
            android:summary="@string/settings_sync_calendar_name_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_sync_contacts"
        android:icon="@drawable/ic_person_black_24dp"
        android:layout="@android:layout/preference_category">
        <SwitchPreference
            android:key="swtSyncContactsTurnOn"
            android:title="@string/settings_sync_contacts_turnOn_header"
            android:summary="@string/settings_sync_contacts_turnOn_summary"/>
        <EditTextPreference
            android:key="txtSyncContactsGroupName"
            android:title="@string/settings_sync_contacts_name_header"
            android:summary="@string/settings_sync_contacts_name_summary"/>
    </PreferenceCategory>
</PreferenceScreen>