<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navLearningCardLesson"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/timetable_lesson" />

    <item
        android:id="@+id/navLearningCardTeacher"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/timetable_teacher" />

    <item
        android:id="@+id/navLearningCardGroups"
        android:icon="@drawable/ic_group_work_black_24dp"
        android:title="@string/learningCard_groups" />

    <item
        android:id="@+id/navLearningCardQueries"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/learningCard_query" />

    <item
        android:id="@+id/navLearningCardAssistant"
        android:icon="@drawable/ic_assistant_black_24dp"
        android:title="@string/learningCard_assistant" />
</menu>
