<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTrafficLights"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_traffic_black_red"
        android:layout_above="@+id/graph"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/controls"
        android:layout_margin="2dp"/>

    <TableLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation"
        android:weightSum="9">
        <TableRow>
            <EditText
                android:id="@+id/txtTrafficLightsOrange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberSigned"
                android:hint="@string/traffic_light_orange"
                android:text="@string/traffic_light_orange_def"/>
            <EditText
                android:id="@+id/txtTrafficLightsRed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberSigned"
                android:hint="@string/traffic_light_red"
                android:text="@string/traffic_light_red_def"/>
            <EditText
                android:id="@+id/txtTrafficLightsMaximum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberSigned"
                android:hint="@string/traffic_light_max"
                android:text="@string/traffic_light_max_def"/>
        </TableRow>
        <EditText
            android:id="@+id/txtTrafficLightsPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:inputType="textPassword"
            android:hint="@string/traffic_light_password"/>
    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation_traffic_lights" />

</RelativeLayout>