<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navTimerLesson"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/timetable_lesson" />

    <item
        android:id="@+id/navTimerClass"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/timetable_class" />

    <item
        android:id="@+id/navTimerTeacher"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/timetable_teacher" />
</menu>