<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navTrafficLightsStart"
        android:icon="@drawable/ic_fiber_manual_record_black_24dp"
        android:title="@string/traffic_light_start"/>

    <item
        android:id="@+id/navTrafficLightsStop"
        android:icon="@drawable/ic_stop_black_24dp"
        android:title="@string/traffic_light_stop"/>

    <item
        android:id="@+id/navTrafficLightsExpand"
        android:icon="@drawable/ic_expand_less_black_24dp"
        android:title="@string/traffic_light_exp"/>
</menu>
