<!--
  ~ Copyright (C) 2017  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.domjos.schooltools.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/settings_general" />

    <header
        android:fragment="de.domjos.schooltools.activities.SettingsActivity$SchoolPreferenceFragment"
        android:icon="@drawable/ic_subject_black_24dp"
        android:title="@string/settings_school" />
    <header
        android:fragment="de.domjos.schooltools.activities.SettingsActivity$ApiPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/main_menu_export" />
</preference-headers>
