<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tbl_border">

    <TableRow android:weightSum="1">
        <TextView
            android:layout_weight="1"
            android:text="@string/note_convert_to_todo"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:id="@+id/txtHeader"/>
    </TableRow>

    <TableRow android:weightSum="10">
        <TextView
            android:text="@string/todo_list"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
    </TableRow>

    <TableRow android:weightSum="10">
        <Spinner
            android:id="@+id/spNotesConvertToToDo"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow android:weightSum="1">
        <Button
            android:id="@+id/cmdStart"
            android:text="@string/note_convert"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>