<!--
  ~ Copyright (C) 2017-2022  Dominic Joas
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tbl_border">
    <RadioGroup
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/marklist_search_after"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:textColor="@color/Black"
            android:layout_height="match_parent"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/rbMarkListSearchPoints"
            android:text="@string/marklist_points"
            android:checked="true"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/Black"/>
        <RadioButton
            android:id="@+id/rbMarkListSearchMark"
            android:text="@string/marklist_mark"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/Black"/>
    </RadioGroup>
    <TableRow android:weightSum="10">
        <TextView
            android:text="@string/marklist_search"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/Black"/>
        <EditText
            android:id="@+id/txtMarkListSearch"
            android:hint="@string/marklist_search"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textColorHint="@color/Black"/>
        <ImageButton
            android:id="@+id/cmdMarkListSearch"
            android:contentDescription="@string/marklist_search"
            app:srcCompat="@drawable/ic_search_black_24dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"/>
    </TableRow>
</TableLayout>